--- a/kubernetes/apps/observability/grafana/app/helmrelease.yaml
+++ b/kubernetes/apps/observability/grafana/app/helmrelease.yaml
@@ -163,28 +163,40 @@ spec:
         flux-logs:
           url: https://raw.githubusercontent.com/fluxcd/flux2-monitoring-example/main/monitoring/configs/dashboards/logs.json
           datasource: Loki
+      # https://github.com/CrunchyData/postgres-operator-examples/pull/317
       postgresql:
         pgbackrest:
-          url: https://raw.githubusercontent.com/CrunchyData/postgres-operator-examples/main/kustomize/monitoring/grafana/dashboards/pgbackrest.json
-          datasource: Prometheus
+          url: https://raw.githubusercontent.com/nasenov/postgres-operator-examples/main/kustomize/monitoring/grafana/dashboards/pgbackrest.json
+          datasource:
+            - { name: DS_PROMETHEUS, value: Prometheus }
+        pgbouncer_direct:
+          url: https://raw.githubusercontent.com/nasenov/postgres-operator-examples/refs/heads/main/kustomize/monitoring/grafana/dashboards/pgbouncer_direct.json
+          datasource:
+            - { name: DS_PROMETHEUS, value: Prometheus }
         pod_details:
-          url: https://raw.githubusercontent.com/CrunchyData/postgres-operator-examples/main/kustomize/monitoring/grafana/dashboards/pod_details.json
-          datasource: Prometheus
+          url: https://raw.githubusercontent.com/nasenov/postgres-operator-examples/main/kustomize/monitoring/grafana/dashboards/pod_details.json
+          datasource:
+            - { name: DS_PROMETHEUS, value: Prometheus }
         postgresql_details:
-          url: https://raw.githubusercontent.com/CrunchyData/postgres-operator-examples/main/kustomize/monitoring/grafana/dashboards/postgresql_details.json
-          datasource: Prometheus
+          url: https://raw.githubusercontent.com/nasenov/postgres-operator-examples/main/kustomize/monitoring/grafana/dashboards/postgresql_details.json
+          datasource:
+            - { name: DS_PROMETHEUS, value: Prometheus }
         postgresql_overview:
-          url: https://raw.githubusercontent.com/CrunchyData/postgres-operator-examples/main/kustomize/monitoring/grafana/dashboards/postgresql_overview.json
-          datasource: Prometheus
+          url: https://raw.githubusercontent.com/nasenov/postgres-operator-examples/main/kustomize/monitoring/grafana/dashboards/postgresql_overview.json
+          datasource:
+            - { name: DS_PROMETHEUS, value: Prometheus }
         postgresql_service_health:
-          url: https://raw.githubusercontent.com/CrunchyData/postgres-operator-examples/main/kustomize/monitoring/grafana/dashboards/postgresql_service_health.json
-          datasource: Prometheus
+          url: https://raw.githubusercontent.com/nasenov/postgres-operator-examples/main/kustomize/monitoring/grafana/dashboards/postgresql_service_health.json
+          datasource:
+            - { name: DS_PROMETHEUS, value: Prometheus }
         prometheus_alerts:
-          url: https://raw.githubusercontent.com/CrunchyData/postgres-operator-examples/main/kustomize/monitoring/grafana/dashboards/prometheus_alerts.json
-          datasource: Prometheus
+          url: https://raw.githubusercontent.com/nasenov/postgres-operator-examples/main/kustomize/monitoring/grafana/dashboards/prometheus_alerts.json
+          datasource:
+            - { name: DS_PROMETHEUS, value: Prometheus }
         query_statistics:
-          url: https://raw.githubusercontent.com/CrunchyData/postgres-operator-examples/main/kustomize/monitoring/grafana/dashboards/query_statistics.json
-          datasource: Prometheus
+          url: https://raw.githubusercontent.com/nasenov/postgres-operator-examples/main/kustomize/monitoring/grafana/dashboards/query_statistics.json
+          datasource:
+            - { name: DS_PROMETHEUS, value: Prometheus }
       ceph:
         ceph-cluster:
           # renovate: depName="Ceph Cluster"
