--- a/kubernetes/apps/database/crunchy-postgres-operator/cluster/postgrescluster.yaml
+++ b/kubernetes/apps/database/crunchy-postgres-operator/cluster/postgrescluster.yaml
@@ -5,8 +5,11 @@ metadata:
   name: &name postgres
   annotations:
     postgres-operator.crunchydata.com/autoCreateUserSchema: "true"
+    postgres-operator.crunchydata.com/allow-upgrade: "postgres-upgrade"
 spec:
   postgresVersion: 17
+
+  shutdown: true
 
   instances:
     - name: postgres
