chore: enable postgres otel metrics feature gate

--- a/kubernetes/apps/database/crunchy-postgres-operator/app/helmrelease.yaml
+++ b/kubernetes/apps/database/crunchy-postgres-operator/app/helmrelease.yaml
@@ -13,3 +13,5 @@ spec:
     singleNamespace: true
     debug: false
     disable_check_for_upgrades: true
+    features:
+      OpenTelemetryMetrics: true
