--- a/kubernetes/apps/database/crunchy-postgres-operator/cluster/postgrescluster.yaml
+++ b/kubernetes/apps/database/crunchy-postgres-operator/cluster/postgrescluster.yaml
@@ -136,6 +136,4 @@ spec:
         parameters:
           synchronous_commit: "on"
 
-  monitoring:
-    pgmonitor:
-      exporter: {}
+  instrumentation: {}
