chore: update glance markets widget

--- a/kubernetes/apps/default/glance/app/resources/glance.yml
+++ b/kubernetes/apps/default/glance/app/resources/glance.yml
@@ -112,15 +112,8 @@ pages:
       - size: small
         widgets:
           - type: markets
-            title: Indices
-            markets:
-              - symbol: SPY
-                name: S&P 500
-              - symbol: DX-Y.NYB
-                name: Dollar Index
-
-          - type: markets
             title: Crypto
+            chart-link-template: https://www.tradingview.com/chart/?symbol={SYMBOL}
             markets:
               - symbol: BTC-USD
                 name: Bitcoin
@@ -129,28 +122,11 @@ pages:
 
           - type: markets
             title: Stocks
+            chart-link-template: https://www.tradingview.com/chart/?symbol={SYMBOL}
             sort-by: absolute-change
             markets:
-              - symbol: NVDA
-                name: NVIDIA
-              - symbol: AAPL
-                name: Apple
-              - symbol: MSFT
-                name: Microsoft
-              - symbol: GOOGL
-                name: Google
-              - symbol: AMD
-                name: AMD
-              - symbol: RDDT
-                name: Reddit
-              - symbol: AMZN
-                name: Amazon
-              - symbol: TSLA
-                name: Tesla
-              - symbol: INTC
-                name: Intel
-              - symbol: META
-                name: Meta
+              - symbol: AVGO
+                name: Broadcom
 
       - size: full
         widgets:
