chore: update glance marktes reddit widget

--- a/kubernetes/apps/default/glance/app/resources/glance.yml
+++ b/kubernetes/apps/default/glance/app/resources/glance.yml
@@ -139,4 +139,4 @@ pages:
             widgets:
               - type: reddit
                 show-thumbnails: true
-                subreddit: crypto
+                subreddit: CryptoCurrency
