feat!: deploy grafana operator

--- a/kubernetes/apps/observability/grafana/app/helmrelease.yaml
+++ b/kubernetes/apps/observability/grafana/app/helmrelease.yaml
@@ -3,235 +3,14 @@
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
-  name: grafana
+  name: grafana-operator
 spec:
   interval: 1h
   chartRef:
     kind: OCIRepository
-    name: grafana
+    name: grafana-operator
   values:
-    replicas: 2
-
-    podDisruptionBudget:
-      minAvailable: 1
-
-    annotations:
-      reloader.stakater.com/auto: "true"
-
+    dashboard:
+      enabled: true
     serviceMonitor:
       enabled: true
-
-    route:
-      main:
-        enabled: true
-        hostnames:
-          - &domain grafana.nasenov.dev
-        parentRefs:
-          - name: envoy-internal
-            namespace: networking
-
-    topologySpreadConstraints:
-      - maxSkew: 1
-        topologyKey: kubernetes.io/hostname
-        whenUnsatisfiable: DoNotSchedule
-        labelSelector:
-          matchLabels:
-            app.kubernetes.io/name: grafana
-
-    admin:
-      existingSecret: grafana-admin
-
-    env:
-      GF_SERVER_DOMAIN: *domain
-      GF_SERVER_ROOT_URL: https://%(domain)s/
-
-    envFromSecrets:
-      - name: grafana-postgres-configuration
-      - name: grafana-postgres-datasource-configuration
-
-    datasources:
-      datasources.yaml:
-        apiVersion: 1
-        datasources:
-          - name: Prometheus
-            type: prometheus
-            uid: prometheus
-            access: proxy
-            url: http://kube-prometheus-stack-prometheus.observability.svc.cluster.local:9090/
-            isDefault: true
-          - name: Loki
-            type: loki
-            uid: loki
-            access: proxy
-            url: http://loki-headless.observability.svc.cluster.local:3100
-            jsonData:
-              maxLines: 1000
-          - name: Postgres
-            type: postgres
-            url: $POSTGRES_DATASOURCE_URL
-            user: $POSTGRES_DATASOURCE_USER
-            secureJsonData:
-              password: $POSTGRES_DATASOURCE_PASSWORD
-            jsonData:
-              database: $POSTGRES_DATASOURCE_DATABASE
-              sslmode: require
-              maxOpenConns: 4
-              maxIdleConnsAuto: true
-
-    dashboardProviders:
-      dashboardproviders.yaml:
-        apiVersion: 1
-        providers:
-          - name: default
-            orgId: 1
-            folder: ""
-            type: file
-            disableDeletion: false
-            editable: true
-            options:
-              path: /var/lib/grafana/dashboards/default
-          - name: flux
-            orgId: 1
-            folder: Flux
-            type: file
-            disableDeletion: false
-            editable: true
-            options:
-              path: /var/lib/grafana/dashboards/flux
-          - name: postgresql
-            orgId: 1
-            folder: PostgreSQL
-            type: file
-            disableDeletion: false
-            editable: true
-            options:
-              path: /var/lib/grafana/dashboards/postgresql
-          - name: ceph
-            orgId: 1
-            folder: Ceph
-            type: file
-            disableDeletion: false
-            editable: true
-            options:
-              path: /var/lib/grafana/dashboards/ceph
-          - name: envoy
-            orgId: 1
-            folder: Envoy
-            type: file
-            disableDeletion: false
-            editable: true
-            options:
-              path: /var/lib/grafana/dashboards/envoy
-
-    dashboards:
-      default:
-        external-dns:
-          # renovate: depName="External-dns"
-          gnetId: 15038
-          revision: 3
-          datasource: Prometheus
-        node-exporter-full:
-          # renovate: depName="Node Exporter Full"
-          gnetId: 1860
-          revision: 42
-          datasource:
-            - { name: DS_PROMETHEUS, value: Prometheus }
-        smartctl-exporter:
-          # renovate: depName="SMARTctl Exporter Dashboard"
-          gnetId: 22604
-          revision: 2
-          datasource:
-            - { name: DS_PROMETHEUS, value: Prometheus }
-        volsync:
-          # renovate: depName="VolSync Dashboard"
-          gnetId: 21356
-          revision: 3
-          datasource:
-            - { name: DS_PROMETHEUS, value: Prometheus }
-            - { name: VAR_REPLICATIONDESTNAME, value: .*-dst }
-        garage:
-          url: https://git.deuxfleurs.fr/Deuxfleurs/garage/raw/branch/main-v1/script/telemetry/grafana-garage-dashboard-prometheus.json
-          datasource:
-            - { name: DS_DS_PROMETHEUS, value: Prometheus }
-      flux:
-        flux-cluster:
-          url: https://raw.githubusercontent.com/fluxcd/flux2-monitoring-example/main/monitoring/configs/dashboards/cluster.json
-          datasource: Prometheus
-        flux-control-plane:
-          url: https://raw.githubusercontent.com/fluxcd/flux2-monitoring-example/main/monitoring/configs/dashboards/control-plane.json
-          datasource: Prometheus
-        flux-logs:
-          url: https://raw.githubusercontent.com/fluxcd/flux2-monitoring-example/main/monitoring/configs/dashboards/logs.json
-          datasource: Loki
-      # https://github.com/CrunchyData/postgres-operator-examples/pull/317
-      postgresql:
-        pgbackrest:
-          url: https://raw.githubusercontent.com/nasenov/postgres-operator-examples/main/kustomize/monitoring/grafana/dashboards/pgbackrest.json
-          datasource:
-            - { name: DS_PROMETHEUS, value: Prometheus }
-        pgbouncer_direct:
-          url: https://raw.githubusercontent.com/nasenov/postgres-operator-examples/refs/heads/main/kustomize/monitoring/grafana/dashboards/pgbouncer_direct.json
-          datasource:
-            - { name: DS_PROMETHEUS, value: Prometheus }
-        pod_details:
-          url: https://raw.githubusercontent.com/nasenov/postgres-operator-examples/main/kustomize/monitoring/grafana/dashboards/pod_details.json
-          datasource:
-            - { name: DS_PROMETHEUS, value: Prometheus }
-        postgresql_details:
-          url: https://raw.githubusercontent.com/nasenov/postgres-operator-examples/main/kustomize/monitoring/grafana/dashboards/postgresql_details.json
-          datasource:
-            - { name: DS_PROMETHEUS, value: Prometheus }
-        postgresql_overview:
-          url: https://raw.githubusercontent.com/nasenov/postgres-operator-examples/main/kustomize/monitoring/grafana/dashboards/postgresql_overview.json
-          datasource:
-            - { name: DS_PROMETHEUS, value: Prometheus }
-        postgresql_service_health:
-          url: https://raw.githubusercontent.com/nasenov/postgres-operator-examples/main/kustomize/monitoring/grafana/dashboards/postgresql_service_health.json
-          datasource:
-            - { name: DS_PROMETHEUS, value: Prometheus }
-        prometheus_alerts:
-          url: https://raw.githubusercontent.com/nasenov/postgres-operator-examples/main/kustomize/monitoring/grafana/dashboards/prometheus_alerts.json
-          datasource:
-            - { name: DS_PROMETHEUS, value: Prometheus }
-        query_statistics:
-          url: https://raw.githubusercontent.com/nasenov/postgres-operator-examples/main/kustomize/monitoring/grafana/dashboards/query_statistics.json
-          datasource:
-            - { name: DS_PROMETHEUS, value: Prometheus }
-      ceph:
-        ceph-cluster:
-          # renovate: depName="Ceph Cluster"
-          gnetId: 2842
-          revision: 18
-          datasource: Prometheus
-        ceph-osd:
-          # renovate: depName="Ceph - OSD (Single)"
-          gnetId: 5336
-          revision: 9
-          datasource: Prometheus
-        ceph-pools:
-          # renovate: depName="Ceph - Pools"
-          gnetId: 5342
-          revision: 9
-          datasource: Prometheus
-      envoy:
-        envoy-gateway:
-          url: https://raw.githubusercontent.com/envoyproxy/gateway/refs/heads/main/charts/gateway-addons-helm/dashboards/envoy-gateway-global.json
-          datasource: Prometheus
-        envoy-proxy:
-          url: https://raw.githubusercontent.com/envoyproxy/gateway/refs/heads/main/charts/gateway-addons-helm/dashboards/envoy-proxy-global.json
-          datasource: Prometheus
-
-    sidecar:
-      dashboards:
-        enabled: true
-        label: grafana_dashboard
-        labelValue: ""
-        searchNamespace: ALL
-        folderAnnotation: grafana_folder
-        provider:
-          foldersFromFilesStructure: true
-      datasources:
-        enabled: true
-        label: grafana_datasource
-        labelValue: ""
-        searchNamespace: ALL
