--- a/kubernetes/apps/observability/grafana/app/ocirepository.yaml
+++ b/kubernetes/apps/observability/grafana/app/ocirepository.yaml
@@ -3,12 +3,12 @@
 apiVersion: source.toolkit.fluxcd.io/v1
 kind: OCIRepository
 metadata:
-  name: grafana
+  name: grafana-operator
 spec:
   interval: 15m
-  url: oci://ghcr.io/grafana/helm-charts/grafana
+  url: oci://ghcr.io/grafana/helm-charts/grafana-operator
   ref:
-    tag: 10.2.0
+    tag: v5.20.0
   layerSelector:
     mediaType: application/vnd.cncf.helm.chart.content.v1.tar+gzip
     operation: copy
