chore: use postgres database for grafana

--- a/kubernetes/apps/observability/grafana/instance/externalsecret.yaml
+++ b/kubernetes/apps/observability/grafana/instance/externalsecret.yaml
@@ -16,3 +16,27 @@ spec:
     - secretKey: GF_SECURITY_ADMIN_PASSWORD
       remoteRef:
         key: 0a377bf4-c992-4a18-b33c-b3a30148c9d4
+---
+# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/external-secrets.io/externalsecret_v1.json
+apiVersion: external-secrets.io/v1
+kind: ExternalSecret
+metadata:
+  name: grafana-postgres-configuration
+spec:
+  secretStoreRef:
+    kind: ClusterSecretStore
+    name: postgres-secrets-store
+  target:
+    template:
+      data:
+        GRAFANA_DATABASE_HOST: "{{ .pgbouncer_host }}:{{ .pgbouncer_port }}"
+        GRAFANA_DATABASE_NAME: "{{ .dbname }}"
+        GRAFANA_DATABASE_USER: "{{ .user }}"
+        GRAFANA_DATABASE_PASSWORD: "{{ .password }}"
+  dataFrom:
+    - extract:
+        key: postgres-pguser-grafana
+      rewrite:
+        - regexp:
+            source: "-"
+            target: "_"
