--- a/kubernetes/apps/observability/grafana/instance/externalsecret.yaml
+++ b/kubernetes/apps/observability/grafana/instance/externalsecret.yaml
@@ -40,3 +40,27 @@ spec:
         - regexp:
             source: "-"
             target: "_"
+---
+# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/external-secrets.io/externalsecret_v1.json
+apiVersion: external-secrets.io/v1
+kind: ExternalSecret
+metadata:
+  name: grafana-postgres-datasource-configuration
+spec:
+  secretStoreRef:
+    kind: ClusterSecretStore
+    name: postgres-secrets-store
+  target:
+    template:
+      data:
+        POSTGRES_DATASOURCE_URL: "{{ .pgbouncer_host }}:{{ .pgbouncer_port }}"
+        POSTGRES_DATASOURCE_DATABASE: "{{ .dbname }}"
+        POSTGRES_DATASOURCE_USER: "{{ .user }}"
+        POSTGRES_DATASOURCE_PASSWORD: "{{ .password }}"
+  dataFrom:
+    - extract:
+        key: postgres-pguser-fitness
+      rewrite:
+        - regexp:
+            source: "-"
+            target: "_"
