chore: add grafana dashboards

--- a/kubernetes/apps/external-secrets/external-secrets/ks.yaml
+++ b/kubernetes/apps/external-secrets/external-secrets/ks.yaml
@@ -8,6 +8,8 @@ spec:
   interval: 1h
   targetNamespace: external-secrets
   dependsOn:
+    - name: grafana
+      namespace: observability
     - name: prometheus-operator-crds
       namespace: observability
     - name: cert-manager
