--- a/kubernetes/apps/database/crunchy-postgres-operator/ks.yaml
+++ b/kubernetes/apps/database/crunchy-postgres-operator/ks.yaml
@@ -10,6 +10,8 @@ spec:
   dependsOn:
     - name: external-secrets-stores
       namespace: external-secrets
+    - name: grafana
+      namespace: observability
   path: ./kubernetes/apps/database/crunchy-postgres-operator/app
   prune: true
   sourceRef:
