--- a/kubernetes/apps/kube-system/cilium/ks.yaml
+++ b/kubernetes/apps/kube-system/cilium/ks.yaml
@@ -8,6 +8,8 @@ spec:
   interval: 1h
   targetNamespace: kube-system
   dependsOn:
+    - name: grafana
+      namespace: observability
     - name: prometheus-operator-crds
       namespace: observability
   path: ./kubernetes/apps/kube-system/cilium/app
