--- a/kubernetes/apps/rook-ceph/rook-ceph/ks.yaml
+++ b/kubernetes/apps/rook-ceph/rook-ceph/ks.yaml
@@ -10,6 +10,8 @@ spec:
   dependsOn:
     - name: external-secrets-stores
       namespace: external-secrets
+    - name: grafana
+      namespace: observability
     - name: prometheus-operator-crds
       namespace: observability
   path: ./kubernetes/apps/rook-ceph/rook-ceph/app
