--- a/kubernetes/apps/rook-ceph/rook-ceph/cluster/helmrelease.yaml
+++ b/kubernetes/apps/rook-ceph/rook-ceph/cluster/helmrelease.yaml
@@ -53,6 +53,22 @@ spec:
         devicePathFilter: /dev/disk/by-id/nvme-KINGSTON_SKC3000S1024G_.*
         config:
           osdsPerDevice: "1"
+      resources:
+        mgr:
+          requests:
+            cpu: 100m
+        mon:
+          requests:
+            cpu: 100m
+        osd:
+          requests:
+            cpu: 100m
+        prepareosd:
+          requests:
+            cpu: 100m
+        cleanup:
+          requests:
+            cpu: 100m
 
     route:
       dashboard:
