chore: reduce descheduler cpu requests

--- a/kubernetes/apps/kube-system/descheduler/app/helmrelease.yaml
+++ b/kubernetes/apps/kube-system/descheduler/app/helmrelease.yaml
@@ -29,6 +29,10 @@ spec:
               matchLabels:
                 app.kubernetes.io/name: descheduler
 
+    resources:
+      requests:
+        cpu: 10m
+
     service:
       enabled: true
 
