chore: reduce envoy gateway memory

--- a/kubernetes/apps/networking/envoy-gateway/app/helmrelease.yaml
+++ b/kubernetes/apps/networking/envoy-gateway/app/helmrelease.yaml
@@ -12,6 +12,11 @@ spec:
   values:
     global:
       imageRegistry: mirror.gcr.io
+    deployment:
+      envoyGateway:
+        resources:
+          limits:
+            memory: 256Mi
     config:
       envoyGateway:
         provider:
