--- a/kubernetes/apps/networking/envoy-gateway/config/envoy.yaml
+++ b/kubernetes/apps/networking/envoy-gateway/config/envoy.yaml
@@ -18,6 +18,7 @@ spec:
           resources:
             requests:
               cpu: 10m
+              memory: 128Mi
             limits:
               memory: 256Mi
 ---
