--- a/kubernetes/apps/kube-system/descheduler/app/helmrelease.yaml
+++ b/kubernetes/apps/kube-system/descheduler/app/helmrelease.yaml
@@ -32,6 +32,9 @@ spec:
     resources:
       requests:
         cpu: 10m
+        memory: 128Mi
+      limits:
+        memory: 128Mi
 
     service:
       enabled: true
