--- a/kubernetes/apps/flux-system/flux-instance/app/values.yaml
+++ b/kubernetes/apps/flux-system/flux-instance/app/values.yaml
@@ -39,8 +39,10 @@ instance:
                 containers:
                   - name: manager
                     resources:
+                      requests:
+                        memory: 128Mi
                       limits:
-                        memory: 2Gi
+                        memory: 256Mi
         target:
           kind: Deployment
           name: "(kustomize-controller|helm-controller|source-controller)"
