--- a/kubernetes/apps/flux-system/flux-instance/app/values.yaml
+++ b/kubernetes/apps/flux-system/flux-instance/app/values.yaml
@@ -45,7 +45,7 @@ instance:
                         memory: 256Mi
         target:
           kind: Deployment
-          name: "(kustomize-controller|helm-controller|source-controller)"
+          name: "(kustomize-controller|helm-controller|source-controller|notification-controller)"
       - # Ref: https://fluxcd.io/flux/installation/configuration/vertical-scaling/#enable-in-memory-kustomize-builds
         patch: |-
           - op: add
