--- a/kubernetes/apps/flux-system/flux-instance/app/values.yaml
+++ b/kubernetes/apps/flux-system/flux-instance/app/values.yaml
@@ -45,7 +45,25 @@ instance:
                         memory: 256Mi
         target:
           kind: Deployment
-          name: "(kustomize-controller|helm-controller|source-controller|notification-controller)"
+          name: "(kustomize-controller|source-controller|notification-controller)"
+      - patch: |-
+          apiVersion: apps/v1
+          kind: Deployment
+          metadata:
+            name: all
+          spec:
+            template:
+              spec:
+                containers:
+                  - name: manager
+                    resources:
+                      requests:
+                        memory: 128Mi
+                      limits:
+                        memory: 512Mi
+        target:
+          kind: Deployment
+          name: helm-controller
       - # Ref: https://fluxcd.io/flux/installation/configuration/vertical-scaling/#enable-in-memory-kustomize-builds
         patch: |-
           - op: add
