--- a/terraform/kubernetes/resources/config.yaml
+++ b/terraform/kubernetes/resources/config.yaml
@@ -70,3 +70,10 @@ cluster:
     admissionControl:
       - name: PodSecurity
         "$patch": delete
+---
+# yaml-language-server: $schema=https://raw.githubusercontent.com/siderolabs/talos/refs/heads/release-1.11/website/content/v1.11/schemas/config.schema.json
+apiVersion: v1alpha1
+kind: VolumeConfig
+name: EPHEMERAL
+provisioning:
+  maxSize: 100GB
