fix: use daemonset for envoy proxy

--- a/kubernetes/apps/networking/envoy-gateway/config/envoy.yaml
+++ b/kubernetes/apps/networking/envoy-gateway/config/envoy.yaml
@@ -11,8 +11,7 @@ spec:
   provider:
     type: Kubernetes
     kubernetes:
-      envoyDeployment:
-        replicas: 2
+      envoyDaemonSet:
         container:
           imageRepository: mirror.gcr.io/envoyproxy/envoy
           resources:
