--- a/kubernetes/apps/database/crunchy-postgres-operator/cluster/kustomization.yaml
+++ b/kubernetes/apps/database/crunchy-postgres-operator/cluster/kustomization.yaml
@@ -4,6 +4,6 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - ./externalsecret.yaml
-  - ./podmonitor.yaml
+  # - ./podmonitor.yaml
   - ./postgrescluster.yaml
-  - ./prometheusrule.yaml
+  # - ./prometheusrule.yaml
