chore: enable postgres otel metrics

--- a/kubernetes/apps/database/crunchy-postgres-operator/cluster/postgrescluster.yaml
+++ b/kubernetes/apps/database/crunchy-postgres-operator/cluster/postgrescluster.yaml
@@ -135,4 +135,5 @@ spec:
       postgresql:
         parameters:
           synchronous_commit: "on"
-# instrumentation: {}
+
+  instrumentation: {}
