--- a/kubernetes/apps/default/n8n/app/helmrelease.yaml
+++ b/kubernetes/apps/default/n8n/app/helmrelease.yaml
@@ -34,6 +34,7 @@ spec:
               N8N_DIAGNOSTICS_ENABLED: "false"
               N8N_VERSION_NOTIFICATIONS_ENABLED: "false"
               N8N_METRICS: "true"
+              N8N_BLOCK_ENV_ACCESS_IN_NODE: "false"
               QUEUE_HEALTH_CHECK_ACTIVE: "true"
             envFrom:
               - secretRef:
