--- a/kubernetes/apps/observability/grafana/instance/grafana.yaml
+++ b/kubernetes/apps/observability/grafana/instance/grafana.yaml
@@ -32,6 +32,18 @@ spec:
                 - secretRef:
                     name: grafana-postgres-configuration
 
+  httpRoute:
+    spec:
+      hostnames:
+        - grafana.nasenov.dev
+      parentRefs:
+        - name: envoy-internal
+          namespace: networking
+      rules:
+        - backendRefs:
+            - name: grafana-service
+              port: 3000
+
   config:
     analytics:
       check_for_updates: "false"
